Updating to List.of