@@ -23,7 +23,6 @@
  */
 package com.synopsys.integration.alert.channel.hipchat.descriptor;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.stereotype.Component;
@@ -42,7 +41,7 @@ public class HipChatGlobalUIConfig extends UIConfig {
     public List<ConfigField> setupFields() {
         final ConfigField apiKey = PasswordConfigField.createRequired(HipChatDescriptor.KEY_API_KEY, "Api Key");
         final ConfigField hostServer = TextInputConfigField.createGrouped(HipChatDescriptor.KEY_HOST_SERVER, "Host Server", FieldGroup.ADVANCED);
-        return Arrays.asList(apiKey, hostServer);
+        return List.of(apiKey, hostServer);
     }
 
     @Override
